--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,8 @@ edition = "2021"
 [dependencies]
 axum = "0.6.19"
 tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
+tower-http = { version = "0.4.3", features = [
+  "trace",
+], default-features = false }
+tracing = "0.1.37"
+tracing-subscriber = "0.3.17"
