--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,5 @@ tower-http = { version = "0.4.3", features = [
   "trace",
 ], default-features = false }
 tracing = "0.1.37"
+tracing-logfmt = "0.3.2"
 tracing-subscriber = "0.3.17"
