--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2021"
 
 [dependencies]
 axum = "0.6.19"
+dotenvy = "0.15.7"
+redis = { version = "0.23.1", features = ["tls-native-tls"] }
 tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
 tower-http = { version = "0.4.3", features = [
   "trace",
