--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ serde = { version = "1.0.180", features = ["derive"] }
 tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
 tower-http = { version = "0.4.3", features = [
   "trace",
+  "cors",
 ], default-features = false }
 tracing = "0.1.37"
 tracing-logfmt = "0.3.2"
