--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,3 +28,5 @@ color-eyre = { version = "0.6", default-features = false, features = [
   "color-spantrace",
 ] }
 thiserror = "1"
+hyper = "0.14.27"
+tower = "0.4.13"
