--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,3 +29,5 @@ color-eyre = { version = "0.6", default-features = false, features = [
 thiserror = "1"
 hyper = "0.14.27"
 tower = "0.4.13"
+chrono = { version = "0.4.31", features = ["serde"] }
+ipgeolocate = "0.3.5"
